ukbg/theme/static/bootstrap-3.3.5/less/siguv.less
/* ... */
@media (max-width: 768px) {
	.media-object {padding-bottom:10px}
	#viewlet-below-content {display:none;}
        /*
	#side-menu {
		background: @blueLighter; 
		border:1px solid #eee; 
		-webkit-box-shadow: 3px 3px 5px 0px;
		-moz-box-shadow: 3px 3px 5px 0px;
		box-shadow: 3px 3px 5px 0px;
		ul {
			list-style-type: none;
			display:block;
			margin-right:5px;
			margin-left:-15px !important;
		}
		li.navTreeItem a:hover {color:white !important;}
		.navTreeLevel0 li.navTreeItem:last-child {border-top: 1px solid #004994;}
	}
        */

   .navMenu {
	//background:@white;
	line-height:30px;
	font-weight:bold;
	padding-left:10px;
	}
    .navMenu a {
	color:@blue !important;
	}
	li.navTreeItem {
	    border-top: 1px solid @white;
	    padding-top:10px;
    	padding-bottom:10px;
    		a {
    		color:@white;
    		&:hover {color:@white !important;text-decoration:underline}
    		}
    	&:hover {background-color:#094079;}
    	}
	    .navbar .nav>li:first-child {
	    margin-left: 0px !important;
	}
	.navbar .nav>li {
	    border-right: 0 !important;
	}
	.navbar-nav {
		    margin: 0 -3px 0 0;
	li {border-bottom:1px solid #094079}
		}
	.navbar-collapse {
	    padding-left: 0px !important;
      padding-right: 0px !important;
    }
    .navbar .nav>li a {
    	padding: 10px 8px 10px;
	}
    .fa-plus-square:before {
    	padding-right: 10px;
	}
	.btn.btn-info {border:@border-radius-none}
}
//carousel
.carousel-caption {
  padding: 6px;
  background: rgba(255, 255, 255, 0.8);
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  text-align: left;
}

.carousel-caption p {
	margin-right:100px;
	color: #333;
}
.carousel-indicators {
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 5;
    margin: 0;
    list-style: none;
}
.carousel-control {
    top: 40%;
    width: 40px;
    height: 40px;
    margin-top: -20px;
    font-size: 36px;
    line-height: 30px;
    text-align: center;
    opacity: 0.8;
    filter: alpha(opacity=80);
    z-index:999;
    padding-left:5px;
    padding-right:5px;
}
.carousel-control.left,
.carousel-control.right {background-image:none;}
//portlet

.portlet-column p {
	padding:0 10px;
	}
dl.portletLogin,
dl.portletCollection,
.portlet-column .portlet {
	background:@white;
	border:1px solid @collapseBg;
	margin:0px 10px 15px 10px;
}
dl.portletLogin .portletHeader,
dl.portletCollection .portletHeader,
.portlet-column h4 {
	color:@bluehover;
	font-weight:bold;
	line-height:1.4em;
	padding-left:10px;
	padding-right:10px;
	border-bottom:1px solid @collapseBg;
	margin:5px 0 !important;
	a {color:@bluehover !important;}
}
.portletStichwort,
.portletNews > div,
.portletCollection > div {
	margin-left:5px;
	}

.portletNews div >div,
.portletCollection div > div {
	line-height: @line-height-computed;
	padding-right: 5px;
	margin-bottom:5px;
	}
dl.portletLogin,
dl.portletCollection {
	.portletHeader {font-size: @font-size-h4;}
	.portletItem {
	margin-left: 13px;
    	text-indent: -13px;
	margin-right:10px;
	margin-bottom:10px;
	}
}
dl.portletLogin {	
	label {margin-left:10px}
	}
.newsPromotion ul,
.portlet-column ul {
	list-style-type: none;
	padding-left:0;
	margin-left:0;
	margin-bottom:2px;
	}

.portletRss a,
.portlet-column h4 a,
.portletNews a,
.portletCollection a,
.portlet-column p,
.portlet-column p a,
.portlet-column ul li a {
	color:@font;
	line-height: @line-height-computed;
}
.list-group.portletItem li,
.portletRss > div{
	padding-right:10px;
	margin-left: 21px;
    	text-indent: -12px;
}
.portletItem a.tile {
    width: 24px;
    height: 24px;
    background-position: -20px -318px;
    padding-left:12px;
}
// breadcrumbs
#portal-breadcrumbs span {
	color:@fontLighter;
	}
.breadcrumb {
    border-radius: 0px;
    margin-right: 10px;
    margin-bottom: 5px !important;
    padding-left:10px !important;
    }
// site-action nav
#site-action {
	padding-right:0px;
}
#site-action .navbar {
  min-height: 0;
}
#site-action .navbar .nav > li > a {
	color: @blue !important;
	padding:0 !important;
	}
#site-action .navbar .nav > .active > a {
	color: @blue;
	}
#site-action .nav  {
	margin-bottom:0;
	}
#site-action ul  {
	margin:10px 10px;
	}
li.divider-vertical:last-child {
	display:none;
}
.divider-vertical {
  border-left: 1px solid @blue;
  border-right: 1px solid @blueLighter;
  height: 12px;
  margin: 2px 4px;
}
.navbar .divider-vertical {
  border-left: 1px solid @blue;
  border-right: 1px solid @blueLighter;
  height: 12px;
  margin: 2px 4px;
}

// personal-tools
ul#portal-personaltools {
  position: absolute;
  z-index: 3;
  top: -3px;
  padding: 0.1em 0.5em;
  list-style-type: none;
  dd {
    position:absolute;
  }
  .dropdown-menu {
    margin: 0 0 0 -1px;
  }
  @media (max-width: 979px) {
    // top: -5px;
    top: -40px;
    // left:86% !important;
    right: 0;
    margin-right: 0;
    .dropdown-menu {
      .dropdown-menu-right;
    }
  }
  @media (min-width: 769px) and (max-width: 991px) {
    .dropdown-menu {
      left: 0;
    }
  }
}

// code tab
        .pattern-math {
            padding-top: 80px; padding-bottom: 80px;
        }
        
        .slider-ver .ct > .ct-viewport {
            padding: 0;
            background-color: #ddd;
            border: 6px solid #fff; 
        }
        .slider-ver .ct-pag .ct-pagitem {
            padding: 25px;
            margin: 0 0 1px 6px;
            background-color: #ddd;
            color: #999;
            font-size: 1.1em;
        }
        .slider-ver .ct-pagitem.ct-cur {
            background-color: #fff;
            color: #333;
        }

        .ct-pagitem.ct-cur:after {
            display: block;
            content: '';
            position: absolute;
            width: 0; height: 0;
            border: 8px solid transparent;
        }

        @media only screen and (min-width: 780px) {
            .ct-pagitem.ct-cur:after {
                left: -9px; top: 50%;
                margin-top: -8px;
                border-left-color: #fff;
            }
        }
/* ... */

